--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,12 @@
 
 * {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+body {
+  background: black;
 }
